@@ -2881,6 +2881,7 @@ class LMS
 			case 'big_networks':
 			case 'ewx_support':
 			case 'helpdesk_stats':
+			case 'helpdesk_customerinfo':
 				if(!isboolean($value))
 					return trans('Incorrect value! Valid values are: 1|t|true|y|yes|on and 0|n|no|off|false');
 			break;
